--- a/package.json
+++ b/package.json
@@ -24,15 +24,23 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "cs-react-components": "^2.0.15",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.9.2",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
+    "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "json-loader": "^0.5.4",
+    "mapbox-gl": "^0.20.1",
+    "transform-loader": "^0.2.3",
+    "webworkify-webpack": "^1.1.1"
   }
 }
