--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CDC Disease Indicator Tool",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --optimize-minimize",
     "start": "webpack-dev-server --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,23 +24,30 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "cs-react-components": "^2.0.15",
+    "css-loader": "^0.25.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.9.2",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
+    "html-webpack-plugin": "^2.22.0",
     "path": "^0.12.7",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "json-loader": "^0.5.4",
     "mapbox-gl": "^0.20.1",
+    "react": "^15.1.0",
+    "react-c3js": "^0.1.8",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "transform-loader": "^0.2.3",
-    "webworkify-webpack": "^1.1.1"
+    "webworkify-webpack": "^1.1.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
