--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/socrata/cdc-indicator#readme",
   "devDependencies": {
+    "autoprefixer": "^6.5.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
@@ -35,6 +36,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "path": "^0.12.7",
+    "postcss-loader": "^0.13.0",
     "react-leaflet": "^0.12.3",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
