--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack": "^1.13.1",
     "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.1",
     "yaml-loader": "^0.4.0"
   },
   "dependencies": {
