--- a/src/constants/userConfigurableOptions.yml
+++ b/src/constants/userConfigurableOptions.yml
@@ -3,8 +3,12 @@ app:
     filter_intro: These filters affect all charts below.
     footnote: Configurations were loaded from a local file.
     intro:
+    source_data_label: Source Data
+    source_system_label: Source System
     title: Indicator Explorer
 filter:
+  # There must be at least one filter with 'value_column' set to 'questionid'
+  # as there are several key visualization configurations based on what indicator is selected.
   - default_value: AL002
     group_by: topic
     label: Select an indicator
@@ -25,18 +29,47 @@ chart:
   - data: trend
     footnote:
     published: true
+    questionid: default
     sort: '1'
     title: Trend
     type: line
   - data: latest
     footnote:
     published: true
+    questionid: default
     sort: '2'
     title: Latest
     type: column
   - footnote:
     published: true
+    questionid: default
     sort: '3'
+    title: Map
+    type: map
+  - data: latest
+    footnote:
+    published: true
+    questionid: default
+    sort: '4'
+    title: This should not load
+    type: line
+  - footnote:
+    published: true
+    questionid: PHY001
+    sort: '1'
+    title: Pie
+    type: pie
+  - data: latest
+    footnote:
+    published: true
+    questionid: PHY001
+    sort: '2'
+    title: Latest
+    type: bar
+  - footnote:
+    published: true
+    questionid: MHL002
+    sort: '1'
     title: Map
     type: map
 indicators:
