--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "^0.13.0",
     "react-c3js": "^0.1.8",
     "react-leaflet": "^0.12.3",
+    "react-modal": "^1.5.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-combine-loaders": "^2.0.0",
