--- a/package.json
+++ b/package.json
@@ -4,29 +4,50 @@
   "description": "CDC Disease Indicator Tool",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --optimize-minimize",
-    "dev-build": "webpack",
-    "start": "webpack-dev-server --inline --hot",
+    "build": "better-npm-run build",
+    "build:dev": "better-npm-run build:dev",
+    "start": "better-npm-run start",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "betterScripts": {
+    "build": {
+      "command": "webpack",
+      "env": {
+        "NODE_ENV": "production"
+      }
+    },
+    "build:dev": {
+      "command": "webpack",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    },
+    "start": {
+      "command": "webpack-dev-server --inline --hot",
+      "env": {
+        "NODE_ENV": "development"
+      }
+    }
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/socrata/cdc-indicator.git"
   },
-  "author": "James Chuang & Austin Valeske",
+  "author": "Hiko Naito, Socrata",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/socrata/cdc-indicator/issues"
   },
   "homepage": "https://github.com/socrata/cdc-indicator#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.0",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "better-npm-run": "0.0.13",
     "css-loader": "^0.25.0",
+    "cssnano": "^3.8.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-loader": "^1.3.0",
@@ -43,9 +64,7 @@
     "react-modal": "^1.5.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-combine-loaders": "^2.0.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.1",
     "yaml-loader": "^0.4.0"
   },
   "dependencies": {
