--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
   },
   "homepage": "https://github.com/socrata/cdc-indicator#readme",
   "devDependencies": {
+    "autoprefixer": "^6.5.2",
     "babel-core": "^6.10.4",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
     "better-npm-run": "0.0.13",
     "css-loader": "^0.25.0",
     "cssnano": "^3.8.0",
