--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-c3js": "^0.1.8",
     "react-leaflet": "^0.12.3",
     "react-modal": "^1.5.2",
+    "redbox-react": "^1.3.3",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
