--- a/src/constants/userConfigurableOptions.yml
+++ b/src/constants/userConfigurableOptions.yml
@@ -80,7 +80,7 @@ chartConfig:
 dataSourcesConfig:
   - data_label: HRQOL
     data_link: https://chronicdata.cdc.gov/d/xuxn-8kju
-    questionid: AL002
+    questionid: CVD1_5
     source_label: BRFSS
     source_link: http://www.cdc.gov/brfss/
   - questionid: MHL002
