--- a/src/constants/userConfigurableOptions.yml
+++ b/src/constants/userConfigurableOptions.yml
@@ -50,7 +50,27 @@ chartConfig:
     indicator: default
     sort: '3'
     title: Map
-    type: map
+    type: pie
+  - data: trend
+    footnote:
+    published: true
+    indicator: 110CSA
+    sort: '1'
+    title: Trend
+    type: line
+  - data: latest
+    footnote:
+    published: true
+    indicator: 110CSA
+    sort: '2'
+    title: Latest
+    type: column
+  - footnote:
+    published: true
+    indicator: 110CSA
+    sort: '3'
+    title: Pie
+    type: pie
   - data: latest
     footnote:
     published: true
