CS-9482: adjust style of filter for map; adjust its location

--- a/src/constants/userConfigurableOptions.yml
+++ b/src/constants/userConfigurableOptions.yml
@@ -50,7 +50,7 @@ chartConfig:
     indicator: default
     sort: '3'
     title: Map
-    type: pie
+    type: map
   - data: trend
     footnote:
     published: true
