--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "cdc-indicator",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "CDC Disease Indicator Tool",
-  "main": "index.js",
+  "main": "src/main.jsx",
   "scripts": {
     "build": "better-npm-run build",
     "build:dev": "better-npm-run build:dev",
@@ -34,7 +34,7 @@
     "url": "git+https://github.com/socrata/cdc-indicator.git"
   },
   "author": "Hiko Naito, Socrata",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/socrata/cdc-indicator/issues"
   },
@@ -46,7 +46,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "better-npm-run": "0.0.13",
     "css-loader": "^0.25.0",
     "cssnano": "^3.8.0",
