--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "json-loader": "^0.5.4",
     "path": "^0.12.7",
     "postcss-loader": "^0.13.0",
-    "react-c3js": "^0.1.8",
+    "react-c3js": "0.1.11",
     "react-leaflet": "^1.0.3",
     "react-modal": "^1.5.2",
     "redbox-react": "^1.3.3",
