Add Apache 2.0 license

--- a/package.json
+++ b/package.json
@@ -34,7 +34,12 @@
     "url": "git+https://github.com/socrata/cdc-indicator.git"
   },
   "author": "Hiko Naito, Socrata",
-  "license": "MIT",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
   "bugs": {
     "url": "https://github.com/socrata/cdc-indicator/issues"
   },
