Add es6-promise polyfill to package.json (fixes an issue with running `npm run build`)

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.13.0",
+    "es6-promise": "^4.1.1",
     "leaflet": "^1.0.2",
     "lodash": "^4.16.1",
     "react": "^15.1.0",
