--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "babel-polyfill": "^6.13.0",
     "es6-promise": "^4.1.1",
+    "jquery": "^3.2.1",
     "leaflet": "^1.0.2",
     "lodash": "^4.16.1",
     "react": "^15.1.0",
