Add mobile-responsive support, upgrade dependencies. See CHANGELOG for details.

--- a/src/constants/userConfigurableOptions.yml
+++ b/src/constants/userConfigurableOptions.yml
@@ -1,5 +1,5 @@
 coreConfig:
-  - data_points: 5
+  - data_points: '5'
     filter_intro: These filters affect all charts below.
     footnote: Configurations were loaded from a local file.
     intro: Intro paragraph
