--- a/.eslintrc
+++ b/.eslintrc
@@ -4,16 +4,29 @@
     "es6": true,
     "node": true
   },
+  "plugins": [
+    "jsx-a11y"
+  ],
   "parser": "babel-eslint",
-  "extends": "airbnb",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "extends": [
+    "airbnb",
+    "plugin:jsx-a11y/recommended"
+  ],
   "rules": {
-    "camelcase": 1,
-    "comma-dangle": [2, "never"],
-    "no-underscore-dangle": ["error", { "allowAfterThis": true }],
-    "no-use-before-define": [2, "nofunc"],
-    "arrow-body-style":[0, "as-needed"],
-    "new-cap": [0],
-    "import/no-unresolved": [0]
+    "comma-dangle": ["error", "never"],
+    "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+    "no-underscore-dangle": [0],
+    // following 3 import rules cause conflicting errors with "resolve" settings in webpack
+    "import/no-extraneous-dependencies": [0],
+    "import/no-unresolved": [0],
+    "import/extensions": [0],
   },
   "globals": {
     "__DEV__": false,
