--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cdc-indicator",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "CDC Disease Indicator Tool",
   "main": "src/main.jsx",
   "scripts": {
@@ -33,7 +33,7 @@
       }
     },
     "start": {
-      "command": "webpack-dev-server --inline --hot",
+      "command": "webpack-dev-server --config ./webpack-dev-server.js --inline --hot",
       "env": {
         "NODE_ENV": "development"
       }
@@ -56,48 +56,59 @@
   },
   "homepage": "https://github.com/socrata/cdc-indicator#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.2",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-2": "^6.18.0",
-    "better-npm-run": "0.0.13",
-    "css-loader": "^0.25.0",
-    "cssnano": "^3.8.0",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-import": "^1.9.2",
-    "eslint-plugin-jsx-a11y": "^1.5.3",
-    "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "gh-pages": "^0.12.0",
-    "html-webpack-plugin": "^2.22.0",
+    "autoprefixer": "^8.0.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "better-npm-run": "^0.1.0",
+    "css-loader": "^0.28.8",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "file-system": "^2.2.2",
+    "gh-pages": "^1.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "js-yaml": "^3.10.0",
     "json-loader": "^0.5.4",
+    "node-sass": "^4.7.2",
     "path": "^0.12.7",
-    "postcss-loader": "^0.13.0",
-    "react-c3js": "0.1.11",
+    "postcss-loader": "^2.0.10",
+    "prop-types": "^15.6.0",
+    "react-a11y": "^1.0.0",
+    "react-c3js": "0.1.20",
+    "react-css-modules": "^4.7.1",
+    "react-hot-loader": "^3.1.3",
     "react-leaflet": "^1.0.3",
-    "react-modal": "^1.5.2",
+    "react-modal": "^3.3.1",
     "redbox-react": "^1.3.3",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "yaml-loader": "^0.4.0"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1",
+    "yaml-loader": "^0.5.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.13.0",
-    "es6-promise": "^4.1.1",
+    "babel-polyfill": "^6.26.0",
+    "c3": "^0.4.21",
+    "d3": "^3.5.17",
+    "es6-promise": "^4.2.4",
     "leaflet": "^1.0.2",
     "lodash": "^4.16.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "soda-js": "^0.2.3",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^2.0.3"
   }
 }
