--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html-webpack-plugin": "^3.2.0",
     "js-yaml": "^3.13.1",
     "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
