--- a/src/constants/configurations.sample.yml
+++ b/src/constants/configurations.sample.yml
@@ -39,8 +39,8 @@ breakoutLabel: stratification1
 # Mapbox and other map related configurations
 map:
   # Mapbox tile style setting
-  tileUrl: https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png
-  tileId: mapbox.light
+  tileUrl: https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}
+  tileId: mapbox/light-v10
   mapboxToken: (ENTER YOUR MAPBOX ACCESS TOKEN)
   # attribution displayed inside Choropleth map
   attribution: |
